name:                lazy-chip8
version:             0.1.0.0
homepage:            https://github.com/githubuser/lazy-chip8#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules: Cpu.Opcodes.Assignment, 
    Cpu.Opcodes.BitwiseOps,
    Cpu.Opcodes.Conditionals,
    Cpu.Opcodes.ConstantOps,
    Cpu.Opcodes.Display,
    Cpu.Opcodes.Flow,
    Cpu.Opcodes.KeyOps,
    Cpu.Opcodes.Math,
    Cpu.Opcodes.Memory,
    Cpu.Opcodes.Timer,
    Cpu.Constants,
    Cpu.Helpers,
    Cpu.Types
  default-extensions: Strict
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5,
    vector,
    random
  default-language: Haskell2010

executable lazy-chip8
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5, 
    sdl2

test-suite hspec
    build-depends: base, 
      hspec,
      lazy-chip8,
      vector
    default-language: Haskell2010
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: Cpu.Opcodes.AssignmentSpec, 
      Cpu.Opcodes.BitwiseOpsSpec,
      Cpu.Opcodes.ConditionalsSpec,
      Cpu.Opcodes.ConstantOpsSpec,
      Cpu.Opcodes.DisplaySpec,
      Cpu.Opcodes.FlowSpec,
      Cpu.Opcodes.KeyOpsSpec,
      Cpu.Opcodes.MathSpec,
      Cpu.Opcodes.MemorySpec,
      Cpu.Opcodes.TimerSpec,
      Cpu.HelpersSpec,
      Cpu.TestHelpers
    type: exitcode-stdio-1.0