name:                lazy-chip8
version:             0.1.0.0
homepage:            https://github.com/smparsons/lazy-chip8#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Parsons
maintainer:          samuel.m.parsons@gmail.com
copyright:           2018 Samuel Parsons
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules: Chip8,
    Chip8.Opcodes,
    Chip8.Opcodes.Assignment, 
    Chip8.Opcodes.BitwiseOps,
    Chip8.Opcodes.Conditionals,
    Chip8.Opcodes.ConstantOps,
    Chip8.Opcodes.Display,
    Chip8.Opcodes.Flow,
    Chip8.Opcodes.KeyOps,
    Chip8.Opcodes.Math,
    Chip8.Opcodes.Memory,
    Chip8.Opcodes.Timer,
    Chip8.Cpu,
    Chip8.Constants,
    Chip8.Helpers,
    Chip8.Types
  default-extensions: Strict
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5,
    vector,
    random,
    lens,
    mtl,
    bytestring
  default-language: Haskell2010

executable lazy-chip8
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  other-modules: Emulator,
    Emulator.Audio,
    Emulator.Events,
    Emulator.Graphics,
    Emulator.Helpers,
    Emulator.Types
  build-depends: base >= 4.7 && < 5, 
    sdl2,
    lazy-chip8,
    bytestring,
    mtl,
    random,
    lens,
    OpenAL,
    ALUT

test-suite hspec
    build-depends: base, 
      hspec,
      lazy-chip8,
      vector,
      random,
      lens,
      mtl,
      bytestring
    default-language: Haskell2010
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: Chip8Spec, 
      Chip8.Opcodes.AssignmentSpec, 
      Chip8.Opcodes.BitwiseOpsSpec,
      Chip8.Opcodes.ConditionalsSpec,
      Chip8.Opcodes.ConstantOpsSpec,
      Chip8.Opcodes.DisplaySpec,
      Chip8.Opcodes.FlowSpec,
      Chip8.Opcodes.KeyOpsSpec,
      Chip8.Opcodes.MathSpec,
      Chip8.Opcodes.MemorySpec,
      Chip8.Opcodes.TimerSpec,
      Chip8.CpuSpec,
      Chip8.HelpersSpec
    type: exitcode-stdio-1.0